<resources>
    <string name="qv_add">+</string>
    <string name="qv_remove">-</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="app_name1">通用版下拉刷新上拉加载控件</string>
    <string name="head">这里是HeadView</string>
    <string name="moneyhint"><font size="15">请输入提现金额</font></string>
    <string name="app_name">安全支付</string>
    <string name="remote_call_failed">访问远程支付宝错误！</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装易信，需要安装易信才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">Linked In</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="incentive_title">分享有奖</string>
    <string name="failed_to_start_incentive_page">无法打开“分享有奖页面”</string>
    <string name="download_faield">下载失败</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="refreshing">刷新中…</string>
    <string name="red_area">红色区</string>
    <string name="blue_area">蓝色区</string>
    <string name="selection_red_ball">（至少选择六个红球）</string>
    <string name="selection_blue_ball">（至少选择一个蓝球）</string>
    <string name="machine_choose">机选</string>
    <string name="betting">投注</string>
    <string name="add_manpower_number">增加人工选号</string>
    <string name="add_machine_number">增加1注机选</string>
    <string name="order_list">订单列表</string>
    <string name="identity_information_explain">真实身份信息是大奖领取的唯一凭证，所有请如实准确的 填写您的身份信息，填写后真实姓名不可更改。</string>
    <string name="supplement_identity_information">补充身份信息</string>
    <string name="real_name">真实姓名：</string>
    <string name="ID_number">身份证号：</string>
    <string name="phone_number">手机号码：</string>
    <string name="protect_question">设置身份信息保护问题</string>
    <string name="choose_question">选择问题：</string>
    <string name="choose_movie">你喜欢的电影？</string>
    <string name="set_answer">设置答案：</string>
    <string name="submit_information">提交信息</string>
    <string name="affirm_pay">确认支付</string>
    <string name="rules">《<u>彩票投注规则</u>》</string>
    <string name="agreen">我已阅读并同意</string>
    <string name="sure">确定</string>
    <string name="red_ball">红球：</string>
    <string name="blue_ball">蓝球：</string>
    <string name="choose_number">请选择随机选球数量</string>
    <string name="select_straight">直选</string>
    <string name="select_drag">胆拖</string>
    <string name="add_number_basket">加入号码篮</string>
    <string name="play_way_introduce" formatted="false">开奖时间：
        \n每周二、四、日晚21:30开奖，单住最高可中500万，每周三期，开奖号码通过摇奖方式产生，中国教育电视台对开奖进行现场直播。
        \n玩法规则：
        \n6个红球+1个蓝球=1注(2元)
        \n奖项设置：
        \n一等奖(当期高等奖奖金的70%和奖池中累积的奖金之和)：
        \n全部6个红球+1个蓝球相同
        \n二等奖(当期高等奖奖金的30%)：
        \n全部6个红球相同
        \n三等奖(3000元)：
        \n任意5个红球+1个蓝球相同
        \n四等奖(200元)：
        \n任意5个红球或任意4个红球+1个蓝球相同
        \n五等奖(10元)：
        \n任意4个红球或任意3个红球+1个蓝球相同
        \n六等奖(5元)：
        \n蓝球相同(有无红球相同均可)</string>
    <string name="voip_call_way"><u>>>设置呼叫方式 </u></string>
    <string name="voip_help_center"><u>帮助中心 </u></string>
    <string name="title_activity_electric_card">我的电子名片</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_hotel_detail">酒店详情</string>
    <string name="title_activity_common_ticket">CommonTicket</string>
    <string name="new_note">添加</string>
    <string name="delete">删除</string>
    <string name="delete_note">您确定要删除吗?</string>
    <string name="new_folder">新建文件夹</string>
    <string name="edit_folder_title">名称</string>
    <string name="Ok">OK</string>
    <string name="delete_all">删除全部</string>
    <string name="save">保存</string>
    <string name="delete_all_note">确定删除全部便签和文件夹?</string>
    <string name="save_success">保存成功</string>
    <string name="delete_success">删除成功</string>
    <string name="save_failed">内容为空，保存失败!</string>
    <string name="list_is_empty">列表为空，删除失败!</string>
    <string name="selected_is_empty">选择为空，删除失败!</string>
    <string name="Deleting">正在删除，请稍等！</string>
    <string name="pleasechoosenote">请选择便签</string>
    <string name="listis_empty">列表为空</string>
    <string name="tel">拨打电话</string>
    <string name="web">浏览网页</string>
    <string name="mynote">标签</string>
    <string name="note_link_other">Open map</string>
    <string name="movetoFolder">移进文件夹</string>
    <string name="moveoutFolder">移出文件夹</string>
    <string name="setAlarm">设置记事提醒</string>
    <string name="toast_add_fail">达到便签数目上限，请删除部分后重试！</string>
    <string name="toast_edit_outbound">达到编辑输入字数上限，请删除部分后重试！</string>
    <string name="no_folder_found">不存在文件夹!</string>
    <string name="folder_add_fail">请输入文件夹名！</string>
    <string name="start_alarm">开启记事提醒</string>
    <string name="alarm_date_setting">记事提醒日期设置</string>
    <string name="alarm_time_setting">记事提醒时间</string>
    <string name="alarm_is_vibrate">震动记事提醒</string>
    <string name="alarm_rings">闹钟铃声</string>
    <string name="set_time_frist">请先设置提醒时间！</string>
    <string name="set_date_frist">请先设置提醒日期！</string>
    <string name="set_date_and_time_frist">请先设置提醒日期和时间！</string>
    <string name="date_time_setted">已经有相同时间的提醒设置，请重新设置时间！</string>
    <string name="set_alarm_ringtone">设置提醒铃声</string>
    <string name="default_rings_name">默认铃声</string>
    <string name="silent">静音</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="default_label">便签记事提醒</string>
    <string name="alarm_notify_snooze_label">记事提醒暂停</string>
    <string name="alarm_notify_snooze_text">记事提醒通知，点击取消！</string>
    <string name="alarm_alert_snooze_set">记事提醒关闭.</string>
    <string name="notify_ticker">闹钟事件！</string>
    <string name="Note_Alarm_Notify">记事提醒通知 !</string>
    <string name="set_time_fail">设定时间失败</string>
    <string name="search_hint">搜索便签</string>
    <string name="search_settings_description">添加</string>
    <string name="noteseligible">没有找到符合条件的提醒</string>
    <string name="Thisfolderalreadyexists">文件夹已存在,请重新输入!</string>
    <string name="Refresh">刷新</string>
    <string name="edit_title">编辑标题</string>
    <string name="menu_export">导出</string>
    <string name="exporting">正在导出，请稍后</string>
    <string name="export_content">内容：</string>
    <string name="export_time">时间：</string>
    <string name="export_title">标题：</string>
    <string name="export_no_content">无</string>
    <string name="sdcard_is_not_exist">Sdcard卡不存在</string>
    <string name="can_not_make_file">不能创建文件</string>
    <string name="export_error">导出过程有误</string>
    <string name="export_sucess_log">共有%1$s条记录，导出到路径%2$s中</string>
    <string name="set_date_and_time">Set time</string>
    <string name="vibrate">need vibrate?</string>
    <string name="delete_label">"Delete"</string>
    <string name="search_item_not_exist">The search item is deleted.</string>
    <string name="Cancel">取消</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="app_tip">提示</string>
    <string name="pay_by_wx">通过微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="read_from_sdcard">从SD卡识别</string>
    <string name="rec_from_camera">从摄相头识别</string>
    <string name="rec_success">识别成功</string>
    <string name="rec_result_title">识别結果</string>
    <string name="rec_failure">请重新拍摄清晰的名片</string>
    <string name="rec_in_progress">正在识别</string>
    <string name="interrupt_rec_confirm">正在进行识别，是否立即中止?</string>
    <string name="sdcard_not_ready">SD卡未准备好</string>
    <string name="waiting">等待</string>
    <string name="ok">好</string>
    <string name="back">返回</string>
    <string name="vip_show_message">我要申请〔注册会员〕</string>
    <string name="vip_show_text2">〔打电话免费〕只需每日签到，轻松得话费，就可永远免费打电话。</string>
    <string name="vip_show_text3">〔谈恋爱免费〕谁说谈恋爱一定要花钱，远大恋爱平台永远都免费。</string>
    <string name="vip_show_text4">〔找资源免费〕资源真实可靠，需要什么找什么，而且永远都免费。</string>
    <string name="vip_show_text5">〔拓人脉免费〕朋友圈、伙伴圈、创业圈、商务圈，永远对您免费。</string>
    <string name="vip_show_text6">〔消费领红包〕到全国商家消费，领取红包种子，享现金红包特权。</string>
    <string name="vip_show_text7">〔建数据免费〕只要是会员就可永远拥有建立自己大数据的大平台。</string>
    <string name="vip_show_text8">〔做事业免费〕只需一部手机就可通过移动互联网开创自己的事业。</string>
    <string name="vip_show_text9">〔学赚钱免费〕培训不花钱，课堂天天有，人人都赚钱，永远免费。</string>
    <string name="vip_show_text10">〔找帮忙免费〕社区天天有人在等你，一个好汉三个帮，绝对免费。</string>
    <string name="vip_show_register">马上申请</string>
</resources>