<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_backgroud"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        layout="@layout/top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/identity_information_explain"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/supplement_identity_information"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real_name"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_real_name"
                style="@style/edittext_round_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID_number"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_ID_number"
                style="@style/edittext_round_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/gray_text"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_phone_number"
                style="@style/edittext_round_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/protect_question"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_question"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_question"
                    style="@style/edittext_round_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/doubleball_question"
                    android:text="@string/choose_movie" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_answer"
                    android:textColor="@color/gray_text"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_answer"
                    style="@style/edittext_round_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/doubleball_red_gray_bg_round_selector"
            android:paddingBottom="5dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="5dp"
            android:text="@string/submit_information"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>