<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/straight_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/red_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/red_area"
            android:textColor="@color/red_ball"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/red_area"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/red_area"
            android:gravity="center"
            android:text="@string/selection_red_ball"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_machine_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/doubleball_yellow_gray_bg_round_selector"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:text="@string/machine_choose"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <include layout="@layout/doubleball_redball_straight_area" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp" >

        <TextView
            android:id="@+id/blue_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/blue_area"
            android:textColor="@color/blue_ball"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/blue_area"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/blue_area"
            android:gravity="center"
            android:text="@string/selection_blue_ball"
            android:textColor="@color/gray_text"
            android:textSize="12sp" />
    </RelativeLayout>

    <include layout="@layout/doubleball_blueball_straight_area" />

</LinearLayout>